# Sword-Spinner-Agent

./: .gitignore  ANDROID_DEBUG_NOTES.md  AndroidManifest.xml  Cargo.toml  LICENSE  README.md  SETUP.md  clippy.toml  my-release-key.keystore  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: android-release.yml  android-test.yml  copilot-setup-steps.yml
src/: lib.rs  main.rs
