[package]
name = "sword-spinner"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A top-down arcade game with physics-based sword spinning"

[lib]
crate-type = ["cdylib"]
name = "sword_spinner"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_state",
    "bevy_color",
    "multi_threaded",
] }
avian2d = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.15", default-features = false, features = ["x11"] }
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Android-specific metadata
# Using AndroidManifest.xml for configuration
[package.metadata.android]
package = "com.swordspinner.game"
build_targets = ["aarch64-linux-android"]
target_sdk_version = 34
